5.5.2
FIXES
    - Fix missing Exodar reputation background

5.5.1
FIXES
    - Fix equipment manager error
    - Fix Torghast floor/level counter mixup


5.5.0
NEW
    - Skinning support for Postal in the mail frame UI (Thanks, Hatdragon)
    - Option to disable map coordinates in both minimap and world map (Thanks, Hatdragon)
    - "Copy Profile" function added
    - Organized, optimized, and cleaned up textures to reduce download size
    - Make Micro Bar movable
    - Update "Important Raid debuffs" with Shadowland ones / remove BfA debuffs
    - Added option to show ID's in tooltips with a modifier
    - Torghast info added to the objective tracker

FIXES
    - Adjust quest view position for a number of Shadowlands NPCs
    - Possible fix for "ZoneabilityContainer"