@@ -1,6 +1,7 @@
 5.5.2
 FIXES
     - Fix missing Exodar reputation background
+    - Fix error while profile renaming
 
 5.5.1
 FIXES
